fix: style scrollbar when needed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,3 +91,11 @@ h3 {
 .prose ul > li {
   @apply mb-4;
 }
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+::-webkit-scrollbar-thumb {
+  @apply bg-neutral-500;
+}
